--- a/step.yaml
+++ b/step.yaml
@@ -12,7 +12,6 @@ metadata:
     - name: Dustin Van Buskirk
       email: dustinvb@codefresh.io
   categories:
-    - featured
     - deployment
   official: true
   tags: []
@@ -30,9 +29,9 @@ metadata:
           deploy:
             type: helmfile
             arguments:
-              CHART_REF: ${{CHART_REF}}
-              RELEASE_NAME: ${{RELEASE_NAME}}
-              KUBE_CONTEXT: ${{KUBE_CONTEXT}}
+              COMMANDS: diff
+              ENVIRONMENT: development
+              KUBE_CONTEXT: dev_cluster
 spec:
   arguments: |-
     {
@@ -41,57 +40,189 @@ spec:
         "type": "object",
         "additionalProperties": false,
         "patterns": [],
-        "required": [],
+        "required": [
+          "COMMANDS"
+        ],
         "properties": {
+            "COMMANDS": {
+                "type": "string",
+                "description": "helmfile commands, executed in order provided",
+                "examples": ["diff","diff,apply"],
+                "default": "version"
+            },
+            "HELMFILE_VERSION": {
+                "type": "string",
+                "description": "Version of helmfile binary",
+                "default": "0.90.2"
+            },           
+            "HELM_BINARY": {
+                "type": "string",
+                "description": "path to helm binary",
+                "default": ""
+            },
+            "FILE": {
+                "type": "string",
+                "description": "load config from file or directory. defaults to helmfile.yaml or `helmfile.d`(means `helmfile.d/*.yaml`) in this preference",
+                "default": ""
+            },
+            "ENVIRONMENT": {
+                "type": "string",
+                "description": "specify the environment name. defaults to default",
+                "default": ""
+            },
+            "STATE_VALUES_SET": {
+                "type": "string",
+                "description": "set state values on the command line (can specify multiple or separate values with commas: key1=val1,key2=val2)",
+                "default": ""
+            },
+            "STATE_VALUES_FILE": {
+                "type": "string",
+                "description": "specify state values in a YAML file",
+                "default": ""
+            },
+            "QUIET": {
+                "type": "boolean",
+                "description": "Silence output. Equivalent to log-level warn",
+                "default": false
+            },
             "KUBE_CONTEXT": {
                 "type": "string",
-                "description": "Kubernetes context to use (the name of the cluster as configured in Codefresh) (required)"
+                "description": "Set kubectl context. Uses current context by default",
+                "default": ""
             },
-            "CHART_NAME": {
-                "type": "string",
-                "description": "Helm chart name to release (path to chart folder, or name of packaged chart) (required)"
+            "NO_COLOR": {
+                "type": "boolean",
+                "description": "Output without color",
+                "default": false
             },
-            "RELEASE_NAME": {
+            "LOG_LEVEL": {
                 "type": "string",
-                "description": "Helm release name"
+                "description": "Set log level, default info",
+                "default": ""
             },
             "NAMESPACE": {
                 "type": "string",
-                "description": "target Kubernetes namespace"
+                "description": "Set namespace. Uses the namespace set in the context by default, and is available in templates as {{ .Namespace }}",
+                "default": ""
             },
-            "TILLER_NAMESPACE": {
+            "SELECTOR": {
                 "type": "string",
-                "description": "Kubernetes namespace where tiller is at"
+                "description": "Only run using the releases that match labels. Labels can take the form of foo=bar or foo!=bar.  A release must match all labels in a group in order to be used. Multiple groups can be specified at once.  --selector tier=frontend,tier!=proxy --selector tier=backend. Will match all frontend, non-proxy releases AND all backend releases. The name of a release can be used as a label. --selector name=myrelease",
+                "default": ""
             },
-            "CHART_VERSION": {
-                "type": "string",
-                "description": "application chart version to install"
+            "ALLOW_NO_MATCHING_RELEASE": {
+                "type": "boolean",
+                "description": "Do not exit with an error code if the provided selector has no matching releases.",
+                "default": false
             },
-            "CHART_REPO_URL": {
-                "type": "string",
-                "description": "Helm chart repository URL (overriden by injected Helm repository context)"
+            "INTERACTIVE": {
+                "type": "boolean",
+                "description": "Request confirmation before attempting to modify clusters",
+                "default": false
             },
-            "CUSTOMFILE_<name>": {
-                "type": "string",
-                "description": "Values file to provide to Helm (as --file). see usage information below."
+            "HELP": {
+                "type": "boolean",
+                "description": "show help",
+                "default": false
             },
-            "CUSTOM_<name>": {
+            "VERSION": {
+                "type": "boolean",
+                "description": "print the version",
+                "default": false
+            },
+            "DEPS_PS": {
                 "type": "string",
-                "description": "Value to provide to Helm (as --set). see usage information below."
+                "description": "String of command options and arguments for, helmfile deps - update charts based on the contents of requirements.yaml",
+                "default": ""
+            },
+            "REPOS_PS": {
+                "type": "string",
+                "description": "String of command options and arguments for, helmfile repos - sync repositories from state file (helm repo add && helm repo update)",
+                "default": ""
+            },
+            "CHARTS_PS": {
+                "type": "string",
+                "description": "String of command options and arguments for, helmfile charts - DEPRECATED: sync releases from state file (helm upgrade --install)",
+                "default": ""
+            },
+            "DIFF_PS": {
+                "type": "string",
+                "description": "String of command options and arguments for, helmfile diff - diff releases from state file against env (helm diff)",
+                "default": ""
+            },
+            "TEMPLATE_PS": {
+                "type": "string",
+                "description": "String of command options and arguments for, helmfile template - template releases from state file against env (helm template)",
+                "default": ""
+            },
+            "LINT_PS": {
+                "type": "string",
+                "description": "String of command options and arguments for, helmfile lint - lint charts from state file (helm lint)",
+                "default": ""
+            },
+            "SYNC_PS": {
+                "type": "string",
+                "description": "String of command options and arguments for, helmfile sync - sync all resources from state file (repos, releases and chart deps)",
+                "default": ""
+            },
+            "APPLY_PS": {
+                "type": "string",
+                "description": "String of command options and arguments for, helmfile apply - apply all resources from state file only when there are changes",
+                "default": ""
+            },
+            "STATUS_PS": {
+                "type": "string",
+                "description": "String of command options and arguments for, helmfile status - retrieve status of releases in state file",
+                "default": ""
+            },
+            "DELETE_PS": {
+                "type": "string",
+                "description": "String of command options and arguments for, helmfile delete - DEPRECATED: delete releases from state file (helm delete)",
+                "default": ""
+            },
+            "DESTROY_PS": {
+                "type": "string",
+                "description": "String of command options and arguments for, helmfile destroy - deletes and then purges releases",
+                "default": ""
+            },
+            "TEST_PS": {
+                "type": "string",
+                "description": "String of command options and arguments for, helmfile test - test releases from state file (helm test)",
+                "default": ""
             }
         }
     }
   steps:
     main:
       name: helmfile
-      image: 'codefreshplugins/helmfile:${{HELMFILE_VERSION'
+      image: 'dustinvanbuskirk/cfstep-helmfile:${{HELMFILE_VERSION}}'
       environment:
+        - 'COMMANDS=${{COMMANDS}}'
+        - 'HELMFILE_VERSION=${{HELMFILE_VERSION}}'
+        - 'HELM_BINARY=${{HELM_BINARY}}'
+        - 'FILE=${{FILE}}'
+        - 'ENVIRONMENT=${{ENVIRONMENT}}'
+        - 'STATE_VALUES_SET=${{STATE_VALUES_SET}}'
+        - 'STATE_VALUES_FILE=${{STATE_VALUES_FILE}}'
+        - 'QUIET=${{QUIET}}'
         - 'KUBE_CONTEXT=${{KUBE_CONTEXT}}'
-        - 'CHART_NAME=${{CHART_NAME}}'
-        - 'RELEASE_NAME=${{RELEASE_NAME}}'
+        - 'NO_COLOR=${{NO_COLOR}}'
+        - 'LOG_LEVEL=${{LOG_LEVEL}}'
         - 'NAMESPACE=${{NAMESPACE}}'
-        - 'TILLER_NAMESPACE=${{TILLER_NAMESPACE}}'
-        - 'CHART_VERSION=${{CHART_VERSION}}'
-        - 'CHART_REPO_URL=${{CHART_REPO_URL}}'
-        - 'CUSTOMFILE_<name>=${{CUSTOMFILE_<name>}}'
-        - 'CUSTOM_<name>=${{CUSTOM_<name>}}'
+        - 'SELECTOR=${{SELECTOR}}'
+        - 'ALLOW_NO_MATCHING_RELEASE=${{ALLOW_NO_MATCHING_RELEASE}}'
+        - 'INTERACTIVE=${{INTERACTIVE}}'
+        - 'HELP=${{HELP}}'
+        - 'VERSION=${{VERSION}}'
+        - 'DEPS_PS=${{DEPS_PS}}'
+        - 'REPOS_PS=${{REPOS_PS}}'
+        - 'CHARTS_PS=${{CHARTS_PS}}'
+        - 'DIFF_PS=${{DIFF_PS}}'
+        - 'TEMPLATE_PS=${{TEMPLATE_PS}}'
+        - 'LINT_PS=${{LINT_PS}}'
+        - 'SYNC_PS=${{SYNC_PS}}'
+        - 'APPLY_PS=${{APPLY_PS}}'
+        - 'STATUS_PS=${{STATUS_PS}}'
+        - 'DELETE_PS=${{DELETE_PS}}'
+        - 'DESTROY_PS=${{DESTROY_PS}}'
+        - 'TEST_PS=${{TEST_PS}}'
