--- a/step.yaml
+++ b/step.yaml
@@ -29,6 +29,7 @@ metadata:
           deploy:
             type: helmfile
             arguments:
+              WORKING_DIRECTORY: /codefresh/volume/${{CF_REPO_NAME}}
               COMMANDS: diff
               ENVIRONMENT: development
               KUBE_CONTEXT: dev_cluster
@@ -46,9 +47,15 @@ spec:
         "properties": {
             "COMMANDS": {
                 "type": "string",
-                "description": "helmfile commands, executed in order provided",
+                "description": "helmfle commands, executed in order provided",
                 "examples": ["diff","diff,apply"],
                 "default": "version"
+            },
+            "WORKING_DIRECTORY": {
+                "type": "string",
+                "description": "",
+                "examples": ["/codefresh/volume/${{CF_REPO_NAME}}"],
+                "default": "/codefresh/volume"
             },
             "HELMFILE_VERSION": {
                 "type": "string",
@@ -198,6 +205,7 @@ spec:
       image: 'dustinvanbuskirk/cfstep-helmfile:${{HELMFILE_VERSION}}'
       environment:
         - 'COMMANDS=${{COMMANDS}}'
+        - 'WORKING_DIRECTORY=${{WORKING_DIRECTORY}}'
         - 'HELMFILE_VERSION=${{HELMFILE_VERSION}}'
         - 'HELM_BINARY=${{HELM_BINARY}}'
         - 'FILE=${{FILE}}'
