--- a/step.yaml
+++ b/step.yaml
@@ -1,8 +1,8 @@
 kind: step-type
 version: '1.0'
 metadata:
-  name: dustinvanbuskirk/helmfile
-  version: 0.0.1
+  name: helmfile
+  version: 0.0.2
   isPublic: true
   description: Use helmfile from Codefresh pipeline
   sources:
@@ -16,11 +16,9 @@ metadata:
   official: true
   tags: []
   icon:
-    type: image
-    size:
-      large:
-        url: >-
-          https://cdn.jsdelivr.net/gh/codefresh-io/steps/incubating/helm/icon.jpg
+    type: svg
+    url: https://cdn.jsdelivr.net/gh/codefresh-contrib/cfstep-helmfile/helm-logo.svg
+    background: "#f4f4f4"
   examples:
     - description: example-1
       workflow:
@@ -57,10 +55,16 @@ spec:
                 "examples": ["/codefresh/volume/${{CF_REPO_NAME}}"],
                 "default": "/codefresh/volume"
             },
+            "HELM_VERSION": {
+                "type": "string",
+                "description": "Version of helmfile binary",
+                "default": "3.0.0",
+                "enum": [ "2.14.3", "3.0.0" ]
+            },    
             "HELMFILE_VERSION": {
                 "type": "string",
                 "description": "Version of helmfile binary",
-                "default": "0.90.2",
+                "default": "0.90.7",
                 "enum": [ "0.90.2", "0.90.7" ]
             },           
             "HELM_BINARY": {
@@ -203,7 +207,7 @@ spec:
   steps:
     main:
       name: helmfile
-      image: 'dustinvanbuskirk/cfstep-helmfile:${{HELMFILE_VERSION}}'
+      image: 'codefresh-plugins/cfstep-helmfile:${{HELM_VERSION}}-${{HELMFILE_VERSION}}'
       environment:
         - 'COMMANDS=${{COMMANDS}}'
         - 'WORKING_DIRECTORY=${{WORKING_DIRECTORY}}'
