--- a/step.yaml
+++ b/step.yaml
@@ -1,7 +1,7 @@
 kind: step-type
 version: '1.0'
 metadata:
-  name: devops/helmfile-3
+  name: devops/cfstep-helmfile-3
   version: 0.1.0
   isPublic: false
   description: Use helmfile from Codefresh pipeline
@@ -27,7 +27,7 @@ metadata:
         version: '1.0'
         steps:        
           deploy:
-            type: devops/helmfile-3
+            type: devops/cfstep-helmfile-3
             arguments:
               WORKING_DIRECTORY: /codefresh/volume/${{CF_REPO_NAME}}
               COMMANDS: diff
@@ -66,8 +66,8 @@ spec:
             "HELMFILE_VERSION": {
                 "type": "string",
                 "description": "Version of helmfile binary",
-                "default": "helm3-v0.98.1",
-                "enum": [ "0.90.2", "0.90.7", "0.93.2", "helm3-v0.98.1" ]
+                "default": "v0.98.1",
+                "enum": [ "0.90.2", "0.90.7", "0.93.2", "v0.98.1" ]
             },
             "HELM_BINARY": {
                 "type": "string",
