--- a/codefresh.yml
+++ b/codefresh.yml
@@ -20,7 +20,7 @@ steps:
       - "HELM_SECRETS_VERSION=${{HELM_SECRETS_VERSION}}"
       - "PYTHON_VERSION=${{PYTHON_VERSION}}"
     type: "build"
-    image_name: "understood/cfstep-helmfile-3"
+    image_name: "cfstep-helmfile-3"
     tag: "${{CF_BRANCH_TAG_NORMALIZED}}"
     dockerfile: "Dockerfile"
     stage: "build"
@@ -54,7 +54,7 @@ steps:
       push:
         title: "Pushing image to cfcr"
         type: "push"
-        image_name: "understood/cfstep-helmfile-3"
+        image_name: "cfstep-helmfile-3"
         registry: "cfcr"
         candidate: "${{build}}"
         tags:
